fix output window wrapping

--- a/src/components/output.css
+++ b/src/components/output.css
@@ -8,11 +8,11 @@
     border: 1px solid #ccc;
     border-radius: 5px;
 margin: auto;
-/* height: auto; */
+/* height: auto;*/
 max-height: 600px;
 overflow: auto;
-white-space:pre;
-overflow-wrap: break-word;
+white-space: pre-wrap; 
+word-wrap: normal; 
 }
 
 a.exit {
